[package]
name = "CherryExchange"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["macros", "sync", "rt-multi-thread"] }
tokio-stream = "0.1.14"
warp = "0.3"
serde = {version = "1.0.217", features = ["derive"] }
serde_json = "1.0"
futures = { version = "0.3", default-features = false }
uuid = { version = "1.1.2", features = ["serde", "v4"] }
log = "0.4.22"
log4rs = "1.3.0"
simple_logger = "5.0.0"
serde_yaml = "0.9.34+deprecated"
