[package]
name = "CherrySTUN"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
byteorder = "1.5.0"
num = "0.4"
num-derive = "0.4"
num-traits = "0.2"
stringprep = "0.1.5" ## Used for normalisation of realm, password, username
hmac-sha1 = "0.2.2" ## Used for Message Integrity
md5 = "0.7.0" ## Used for hmac key caculation
